Updated dependencies and copyright.